# sdk

./: .clang-format  CMakeLists.txt
include/: NavApp.h
include/common/: GeoCoordinate.h  Junction.h  Link.h
private/include/: Builders.h  Id.h  NavAppImpl.h  OsmMapData.h
private/include/MapData/: AbstractMapData.h  NodeData.h  OsmMapData.h  OsmMapDataStatistics.h  OsmXmlParser.h  WayData.h
private/include/builders/: GeoCoordinateBuilder.h  JunctionBuilder.h  LinkBuilder.h
private/src/: NavAppImpl.cpp  OsmMapData.cpp
private/src/MapData/: OsmMapData.cpp  OsmMapDataStatistics.cpp  OsmXmlParser.cpp
private/src/builders/: GeoCoordinateBuilder.cpp  JunctionBuilder.cpp  LinkBuilder.cpp
src/: NavApp.cpp
tests/: CMakeLists.txt
tests/res/OsmMapData_Test/: initial_test.osm
tests/src/: OsmMapData_Test.cpp
